# jetson-carspeed-rstp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  calibrate_h.py  calibrate_homography.py  carspeed.py  carspeed_file.py  deepstream_speed.py  ds_config.txt  pyproject.toml  speed_detector.py  speed_plugin.c  tracker.py  trafficcamnet.trt
.github/workflows/: ci.yml
carspeed/: __init__.py  cli.py
carspeed/core/: __init__.py  speed_math.py  tracker_wrapper.py
carspeed/io/: db.py  rtsp.py
carspeed/pipeline/: __init__.py  config.py  deepstream_graph.py
carspeed/pipelines/: deepstream.py
tests/: test_deepstream_speed.py  test_pipeline.py  test_speed_math.py  test_speedtrack.py  test_tracker.py
tests/assets/: synthetic_centroids.json
