[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "carspeed"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "CarSpeed"}]
license = {text = "LGPL-2.1-or-later"}

[project.scripts]
carspeed = "carspeed.cli:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["gi", "gi.*"]
ignore_missing_imports = true
